tests/ui/transmute/issue-115402-overflow-size.stderr
error[E0277]: `ExplicitlyPadded` cannot be safely transmuted into `()` in the defining scope of `assert::Context`
  --> $DIR/issue-115402-overflow-size.rs:25:55
   |
LL |     assert::is_maybe_transmutable::<ExplicitlyPadded, ()>();
   |                                                       ^^ values of the type `ExplicitlyPadded` are too big for the current architecture
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/issue-115402-overflow-size.rs:9:14
   |
LL |     pub fn is_maybe_transmutable<Src, Dst>()
   |            --------------------- required by a bound in this function
LL |     where
LL |         Dst: BikeshedIntrinsicFrom<Src, Context>,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_maybe_transmutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
